--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -584,11 +584,6 @@ footer .footer_content .footer_content__div .copyright
     min-height: 210px;
 }
 
-.projet .description_projet .btn_lire_projet
-{
-    color: var(--links);
-}
-
 .projet .footer_projet
 {
     margin: 24px auto 16px auto;
@@ -972,7 +967,7 @@ footer .footer_content .footer_content__div .copyright
 .formulaire_connexion button
 {
     width: 100%;
-    margin-top: 16px;
+    margin-bottom: 16px;
     border: 1px solid var(--blue);
     background: var(--blue);
     color: #FFF;
@@ -992,7 +987,7 @@ footer .footer_content .footer_content__div .copyright
 
 .formulaire_connexion .message_connexion
 {
-    margin-top: 32px;
+    margin-top: 16px;
     font-size: 13px;
 }
 
@@ -1098,6 +1093,11 @@ footer .footer_content .footer_content__div .copyright
     width: 70%;
     height: 100px;
     object-fit: cover;
+}
+
+.administration .tbl_contenu img.avatar
+{
+    width: 50%;
 }
 
 .administration .tbl_contenu .label_brouillon
@@ -1798,6 +1798,18 @@ footer .footer_content .footer_content__div .copyright
         width: 100%;
     }
 
+    .projet .corps_projet .titre_projet,
+    .projet .corps_projet .description_projet
+    {
+        min-height: unset;
+    }
+
+    .projet .footer_projet
+    {
+        width: 100%;
+        margin: 0;
+    }
+
     .projet_header
     {
         height: 200px;
@@ -1847,20 +1859,6 @@ footer .footer_content .footer_content__div .copyright
     .projet_contenu .projet_texte
     {
         padding: 16px 8px;
-    }
-
-    .modal_suggerer_modifications
-    {
-        width: 100%;
-        height: 500px;
-        background: #FFF;
-        padding: 8px;
-        position: fixed;
-    }
-
-    .modal_suggerer_modifications .modal_content
-    {
-        padding: 8px;
     }
 
     .nouveau_projet form
