Bug header PHP résolu + Blocage/Déblocage compte utilisateur

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1199,7 +1199,8 @@ footer .footer_content .footer_content__div .copyright
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
 }
 
-.administration .tbl_actions .btn_administration.editer
+.administration .tbl_actions .btn_administration.editer,
+.administration .tbl_actions .btn_administration.debloquer_utilisateur
 {
     background: #388E3C;
 }
@@ -1216,7 +1217,8 @@ footer .footer_content .footer_content__div .copyright
     background: #1976D2;
 }
 
-.administration .tbl_actions .btn_administration.supprimer
+.administration .tbl_actions .btn_administration.supprimer,
+.administration .tbl_actions .btn_administration.bloquer_utilisateur
 {
     background: #cc0e0e;
 }
